# near-nft-benefits-vault

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  test.sh
.github/workflows/: docs-deploy.yml  rust.yml
depositary/: Cargo.toml
depositary/src/: lib.rs  views.rs
implementors/schemars/: trait.JsonSchema.js
near_sdk/: all.html  attr.ext_contract.html  attr.near_bindgen.html  constant.ONE_NEAR.html  constant.ONE_YOCTO.html  derive.BorshStorageKey.html  derive.EventMetadata.html  derive.FunctionError.html  derive.PanicOnDefault.html  enum.CurveType.html  enum.PromiseError.html  enum.PromiseOrValue.html  enum.PromiseResult.html  enum.ReturnData.html  enum.VmPromiseResult.html  index.html  macro.log.html  macro.metadata.html  macro.require.html  macro.setup_alloc!.html  macro.setup_alloc.html  macro.testing_env!.html  macro.testing_env.html  sidebar-items.js  struct.Abort.html  struct.AccountId.html  struct.Gas.html  struct.GasWeight.html  struct.MockedBlockchain.html  struct.ParseAccountIdError.html  struct.Promise.html  struct.PublicKey.html  struct.RuntimeFeesConfig.html  struct.VMConfig.html  struct.VMContext.html  trait.FunctionError.html  trait.IntoStorageKey.html  type.Balance.html  type.BlockHeight.html  type.BlockHeightDelta.html  (+20 more)
near_sdk/collections/: constant.ERR_ELEMENT_DESERIALIZATION.html  constant.ERR_ELEMENT_SERIALIZATION.html  constant.ERR_INCONSISTENT_STATE.html  index.html  sidebar-items.js  struct.LazyOption.html  struct.LegacyTreeMap.html  struct.LookupMap.html  struct.LookupSet.html  struct.TreeMap.html  struct.UnorderedSet.html
near_sdk/env/: constant.STORAGE_PRICE_PER_BYTE.html  fn.abort.html  fn.account_balance.html  fn.account_locked_balance.html  fn.attached_deposit.html  fn.block_height.html  fn.block_index.html  fn.block_timestamp.html  fn.block_timestamp_ms.html  fn.current_account_id.html  fn.epoch_height.html  fn.input.html  fn.is_valid_account_id.html  (+55 more)
nft_benefits_vault/: all.html  index.html  sidebar-items.js  struct.Contract.html  struct.ContractExt.html
scripts/: build.sh  test.sh
src/: asset.rs  calls.rs  lib.rs  nft_id.rs  vault.rs  view.rs  views.rs
tests-integration/: Cargo.toml
tests-integration/src/: environment.rs  integration.rs  lib.rs
vault/: Cargo.toml
vault/src/: asset.rs  lib.rs  views.rs
vault/src/interface/: ft_receiver.rs  mod.rs
(+367 files in other folders)
