[package]
name = "nft-benefits-vault"
version = "0.2.0"
authors = ["Pavel Iakushin <piakushin@roke.to>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "4.1"
near-contract-standards = "4.1"
serde = "1.0"

[dev-dependencies]
tokio = { version = "1.23", features = ["macros", "rt"] }
futures = "0.3"
anyhow = "1.0"
workspaces = "0.7"
env_logger = "0.10"
log = "0.4"