[package]
name = "nft-benefits-vault"
version = "0.0.0"
authors = ["Pavel Iakushin <piakushin@roke.to>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0"
near-contract-standards = "4.0"
serde = "1.0"

[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "rt"] }
anyhow = "1.0"
workspaces = "0.6"